:wrench: Fix : Chat 소나큐브 체크 수정